--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 
 <body>
+   <header>
    <section data-bs-version="5.1" class="menu menu6 cid-uzzGQ2ObG4" once="menu" id="menu06-1w">
        <nav class="navbar navbar-dropdown opacityScrollOff navbar-fixed-top navbar-expand-lg">
            <div class="container">
@@ -75,6 +76,7 @@
            </div>
        </nav>
    </section>
+   </header>
    <section data-bs-version="5.1" class="slider3 cid-uzzJRVDQqT" id="slider03-1n">
        <div class="carousel slide" id="uzB8WRF5FE" data-interval="5000" data-bs-interval="5000">
            <ol class="carousel-indicators">
@@ -283,7 +285,7 @@
                                Line-up-ul a fost pur și simplu spectaculos!”
                            </p>
                            <div class="img-wrapper mt-4 mb-2">
-                               <img src="assets/images/m-10-160x107.jpg" data-slide-to="3" data-bs-slide-to="3" alt="">
+                               <img src="m-10.jpg" data-slide-to="3" data-bs-slide-to="3" alt="">
                            </div>
                            <h3 class="card-title mbr-fonts-style display-7">
                                <strong>Radu T</strong>
@@ -294,6 +296,7 @@
            </div>
        </div>
    </section>
+   <footer>
    <section data-bs-version="5.1" class="footer3 cid-uzzP57ISCn" once="footers" id="footer03-1r">
        <div class="container">
            <div class="row">
@@ -336,6 +339,7 @@
            </div>
        </div>
    </section>
+   </footer>
    <section>
        <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
        <script src="assets/parallax/jarallax.js"></script>
