--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                împărtășesc din nou această energie pozitivă!"
                            </p>
                            <div class="img-wrapper mt-4 mb-2">
-                               <img src="assets/images/m-9-160x107.jpg" data-slide-to="0" data-bs-slide-to="0" alt="">
+                               <img src="m-9.jpg" data-slide-to="0" data-bs-slide-to="0" alt="">
                            </div>
                            <h3 class="card-title mbr-fonts-style display-7">
                                <strong>Alex P.</strong>
@@ -253,7 +253,7 @@
                                atmosfera a fost incendiară!”
                            </p>
                            <div class="img-wrapper mt-4 mb-2">
-                               <img src="assets/images/w-14-160x107.jpg" data-slide-to="1" data-bs-slide-to="1" alt="">
+                               <img src="w-14.jpg" data-slide-to="1" data-bs-slide-to="1" alt="">
                            </div>
                            <h3 class="card-title mbr-fonts-style display-7">
                                <strong>Diana C.</strong>
@@ -269,7 +269,7 @@
                                siguranță, un eveniment de top!"
                            </p>
                            <div class="img-wrapper mt-4 mb-2">
-                               <img src="assets/images/w-15-160x240.jpg" data-slide-to="2" data-bs-slide-to="2" alt="">
+                               <img src="w-15.jpg" data-slide-to="2" data-bs-slide-to="2" alt="">
                            </div>
                            <h3 class="card-title mbr-fonts-style display-7">
                                <strong>Andreea M.</strong>
