--- a/lineup.html
+++ b/lineup.html
@@ -29,6 +29,7 @@
  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=FhrpIK" type="text/css">
 </head>
 <body>
+ <header>
  <section data-bs-version="5.1" class="menu menu6 cid-uzzGQ2ObG4" once="menu" id="menu06-1w">
    <nav class="navbar navbar-dropdown opacityScrollOff navbar-fixed-top navbar-expand-lg">
      <div class="container">
@@ -70,6 +71,7 @@
      </div>
    </nav>
  </section>
+ </header>
  <section data-bs-version="5.1" class="gallery4 cid-uzA1iCUsj0" id="gallery04-1v">
    <div class="container-fluid gallery-wrapper">
      <div class="row justify-content-center">
@@ -184,8 +186,7 @@
      </div>
    </div>
  </section>
-
-
+<footer>
  <section data-bs-version="5.1" class="footer3 cid-uzzP57ISCn" once="footers" id="footer03-1t">
    <div class="container">
      <div class="row">
@@ -228,6 +229,7 @@
      </div>
    </div>
  </section>
+</footer>
  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
  <script src="assets/smoothscroll/smooth-scroll.js"></script>
  <script src="assets/ytplayer/index.js"></script>
