--- a/bilete.html
+++ b/bilete.html
@@ -34,6 +34,7 @@ color: #f7f7f7;
 </style>
 </head>
 <body>
+  <header>
 <section data-bs-version="5.1" class="menu menu6 cid-uzzGQ2ObG4" once="menu" id="menu06-1w">
   <nav class="navbar navbar-dropdown opacityScrollOff navbar-fixed-top navbar-expand-lg">
     <div class="container">
@@ -75,6 +76,7 @@ color: #f7f7f7;
     </div>
   </nav>
 </section>
+  </header>
 <section data-bs-version="5.1" class="pricing02 cid-uzAqRAsJaX" id="pricing02-26">
   <div class="mbr-overlay"></div>
   <div class="container">
@@ -171,6 +173,7 @@ color: #f7f7f7;
     </div>
   </div>
 </section>
+  <footer>
 <section data-bs-version="5.1" class="footer3 cid-uzzP57ISCn" once="footers" id="footer03-1x">
   <div class="container">
     <div class="row">
@@ -217,6 +220,7 @@ color: #f7f7f7;
     </div>
   </div>
 </section>
+</footer>
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/smoothscroll/smooth-scroll.js"></script>
 <script src="assets/ytplayer/index.js"></script>
