--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
 
 
 <body>
+   <header>
    <section data-bs-version="5.1" class="menu menu6 cid-uzzGQ2ObG4" once="menu" id="menu06-1w">
        <nav class="navbar navbar-dropdown opacityScrollOff navbar-fixed-top navbar-expand-lg">
            <div class="container">
@@ -75,6 +76,7 @@
            </div>
        </nav>
    </section>
+      </header>
    <section data-bs-version="5.1" class="contacts02 map1 cid-uzAblCEYvo mbr-parallax-background" id="contacts02-24">
        <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
        <div class="container">
