--- a/lineup.html
+++ b/lineup.html
@@ -6,7 +6,7 @@
  <meta name="keywords" content="distractie, muzică, festival, artisti, lineup, concert, natură">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
- <link rel="shortcut icon" href="assets/images/logo-96x94.png" type="image/x-icon">
+ <link rel="shortcut icon" href="logo.png" type="image/x-icon">
  <meta name="description"
    content="Descoperă artiștii care vor transforma fiecare moment al evenimentului într-o experiență de neuitat. De la ritmurile vibrante ale muzicii electronice, la melodiile pline de emoție ale genurilor alternative și până la spectacolele live pline de energie, lineup-ul nostru aduce pe scenă cei mai talentați și apreciați artiști ai momentului.">
  <title>Line-up</title>
@@ -27,6 +27,11 @@
  </noscript>
  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=FhrpIK">
  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=FhrpIK" type="text/css">
+ <style>
+  p {
+  font-family: "Open Sans", sans-serif;
+  }
+ </style>
 </head>
 <body>
  <header>
