--- a/lineup.html
+++ b/lineup.html
@@ -28,7 +28,7 @@
  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=FhrpIK">
  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=FhrpIK" type="text/css">
  <style>
-  p {
+  body {
   font-family: "Open Sans", sans-serif;
   }
  </style>
