--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
    </noscript>
    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=e99fX2">
    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=e99fX2" type="text/css">
+   <style>
+      body {
+  font-family: "Open Sans", sans-serif;
+  }
+   </style>
 </head>
 
 
