--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html>
-
-
+<html lang="ro">
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,7 +38,7 @@
 
 <body>
    <header>
-   <section data-bs-version="5.1" class="menu menu6 cid-uzzGQ2ObG4" once="menu" id="menu06-1w">
+   <section data-bs-version="5.1" class="menu menu6 cid-uzzGQ2ObG4" id="menu06-1w">
        <nav class="navbar navbar-dropdown opacityScrollOff navbar-fixed-top navbar-expand-lg">
            <div class="container">
                <div class="navbar-brand">
@@ -302,7 +300,7 @@
        </div>
    </section>
    <footer>
-   <section data-bs-version="5.1" class="footer3 cid-uzzP57ISCn" once="footers" id="footer03-1r">
+   <section data-bs-version="5.1" class="footer3 cid-uzzP57ISCn" id="footer03-1r">
        <div class="container">
            <div class="row">
                <div class="row-links">
@@ -355,6 +353,7 @@
        <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
        <script src="assets/theme/js/script.js"></script>
        <input name="animation" type="hidden">
+   </section>
 </body>
 </html>
 
