--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
                    data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent"
                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                   <div class="hamburger">
+                   <span class="hamburger">
                        <span></span>
                        <span></span>
                        <span></span>
