--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="author" content="Teodora-Maria Kovács">
    <meta name="keywords" content="distractie, muzică, festival, artisti, lineup, concert, natură">
    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-   <link rel="shortcut icon" href="assets/images/logo-96x94.png" type="image/x-icon">
+   <link rel="shortcut icon" href="logo.png" type="image/x-icon">
    <meta name="description"
        content="Festivalul de muzică Echo Valley care aduce împreună artiști de top și oameni pasionați. Experimentează muzica live în mijlocul naturii, creează prietenii noi și bucură-te de o atmosferă unică, plină de energie și conexiuni autentice. Vino să simți magia sunetelor alături de noi!">
    <title>Echo Valley</title>
