--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                        <span></span>
                        <span></span>
                        <span></span>
-                   </div>
+                   </span>
                </button>
                <div class="collapse navbar-collapse opacityScrollOff" id="navbarSupportedContent">
                    <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
