--- a/bilete.html
+++ b/bilete.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ro">
 <head>
 <meta charset="UTF-8">
 <meta name="author" content="Teodora-Maria Kovács">
@@ -38,7 +38,7 @@ color: #f7f7f7;
 </head>
 <body>
   <header>
-<section data-bs-version="5.1" class="menu menu6 cid-uzzGQ2ObG4" once="menu" id="menu06-1w">
+<section data-bs-version="5.1" class="menu menu6 cid-uzzGQ2ObG4" id="menu06-1w">
   <nav class="navbar navbar-dropdown opacityScrollOff navbar-fixed-top navbar-expand-lg">
     <div class="container">
       <div class="navbar-brand">
@@ -55,12 +55,12 @@ color: #f7f7f7;
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
         data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <div class="hamburger">
+        <span class="hamburger">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
-        </div>
+        </span>
       </button>
       <div class="collapse navbar-collapse opacityScrollOff" id="navbarSupportedContent">
         <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
@@ -177,7 +177,7 @@ color: #f7f7f7;
   </div>
 </section>
   <footer>
-<section data-bs-version="5.1" class="footer3 cid-uzzP57ISCn" once="footers" id="footer03-1x">
+<section data-bs-version="5.1" class="footer3 cid-uzzP57ISCn" id="footer03-1x">
   <div class="container">
     <div class="row">
       <div class="row-links">
@@ -192,10 +192,6 @@ color: #f7f7f7;
               class="text-success">Contact</a></li>
         </ul>
       </div>
-
-
-
-
       <div class="col-12 mt-4">
         <div class="social-row">
           <div class="soc-item">
