--- a/bilete.html
+++ b/bilete.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="distractie, muzică, festival, concert, natură">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-<link rel="shortcut icon" href="assets/images/logo-96x94.png" type="image/x-icon">
+<link rel="shortcut icon" href="logo.png" type="image/x-icon">
 <meta name="description"
   content="Descoperă tipurile de bilete disponibile pentru festival: opțiuni pentru toate preferințele, de la acces general la experiențe VIP. Rezervă-ți locul acum și bucură-te de muzică, distracție și momente unice!">
 <title>Bilete</title>
