--- a/lineup.html
+++ b/lineup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ro">
 <head>
  <meta charset="UTF-8">
  <meta name="author" content="Teodora-Maria Kovács">
@@ -35,7 +35,7 @@
 </head>
 <body>
  <header>
- <section data-bs-version="5.1" class="menu menu6 cid-uzzGQ2ObG4" once="menu" id="menu06-1w">
+ <section data-bs-version="5.1" class="menu menu6 cid-uzzGQ2ObG4" id="menu06-1w">
    <nav class="navbar navbar-dropdown opacityScrollOff navbar-fixed-top navbar-expand-lg">
      <div class="container">
        <div class="navbar-brand">
@@ -52,12 +52,12 @@
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
          data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent"
          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-         <div class="hamburger">
+         <span class="hamburger">
            <span></span>
            <span></span>
            <span></span>
            <span></span>
-         </div>
+         </span>
        </button>
        <div class="collapse navbar-collapse opacityScrollOff" id="navbarSupportedContent">
          <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
@@ -85,11 +85,11 @@
            <h1 class="mbr-section-title mbr-fonts-style align-center mb-0 display-1">
              <strong>Line-up</strong>
            </h1>
-           <p class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-7">
+           <div class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-7">
              <div><br></div>
-             <div>Explorează lineup-ul nostru spectaculos, plin de artiști de top din diverse genuri muzicale, gata să
-               transforme fiecare moment al evenimentului într-o experiență memorabilă!</div>
-             </p>
+             <p>Explorează lineup-ul nostru spectaculos, plin de artiști de top din diverse genuri muzicale, gata să
+               transforme fiecare moment al evenimentului într-o experiență memorabilă!</p>
+             </div>
          </div>
        </div>
      </div>
@@ -192,7 +192,7 @@
    </div>
  </section>
 <footer>
- <section data-bs-version="5.1" class="footer3 cid-uzzP57ISCn" once="footers" id="footer03-1t">
+ <section data-bs-version="5.1" class="footer3 cid-uzzP57ISCn" id="footer03-1t">
    <div class="container">
      <div class="row">
        <div class="row-links">
