--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html>
-
-
+<html lang="ro">
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,11 +34,9 @@
   }
    </style>
 </head>
-
-
 <body>
    <header>
-   <section data-bs-version="5.1" class="menu menu6 cid-uzzGQ2ObG4" once="menu" id="menu06-1w">
+   <section data-bs-version="5.1" class="menu menu6 cid-uzzGQ2ObG4" id="menu06-1w">
        <nav class="navbar navbar-dropdown opacityScrollOff navbar-fixed-top navbar-expand-lg">
            <div class="container">
                <div class="navbar-brand">
@@ -57,12 +53,12 @@
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
                    data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent"
                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                   <div class="hamburger">
+                   <span class="hamburger">
                        <span></span>
                        <span></span>
                        <span></span>
                        <span></span>
-                   </div>
+                   </span>
                </button>
                <div class="collapse navbar-collapse opacityScrollOff" id="navbarSupportedContent">
                    <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
@@ -161,10 +157,8 @@
        </div>
    </div>
 </section>
-
-
    <footer>
-   <section data-bs-version="5.1" class="footer3 cid-uzzP57ISCn" once="footers" id="footer03-23">
+   <section data-bs-version="5.1" class="footer3 cid-uzzP57ISCn" id="footer03-23">
        <div class="container">
            <div class="row">
                <div class="row-links">
