--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
                    </div>
                </div>
                <div class="map-wrapper col-md-12 col-lg-6">
-                   <div class="google-map"><iframe frameborder="0" style="border:0"
+                   <div class="google-map"><iframe  style="border:0"
                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86491.58758125392!2d22.742726235431068!3d47.35608996836353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4748735e16005359%3A0xfa48c0f886dcafe4!2zNDU3MjMwIFPEg3JtxIPImWFn!5e0!3m2!1sro!2sro!4v1736606511134!5m2!1sro!2sro"
                            allowfullscreen=""></iframe></div>
                </div>
