--- a/lineup.html
+++ b/lineup.html
@@ -85,7 +85,7 @@
            <h1 class="mbr-section-title mbr-fonts-style align-center mb-0 display-1">
              <strong>Line-up</strong>
            </h1>
-           <div class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-7">
+           <div class="mbr-section-subtitle mbr-fonts-style mb-0 mt-4 display-7">
              <div><br></div>
              <p>Explorează lineup-ul nostru spectaculos, plin de artiști de top din diverse genuri muzicale, gata să
                transforme fiecare moment al evenimentului într-o experiență memorabilă!</p>
