--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
            <div class="col-12 content-head">
                <div class="mbr-section-head mb-5">
                    <h2 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                       <strong>Abonează-te la newsletter!</strong>
+                       <strong>Pune o întrebare!</strong>
                    </h2>
                   
                </div>
