am eliminat brurile

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
                        decât un festival — o experiență autentică unde muzica, natura și oamenii se îmbină într-o
                        atmosferă unică, vibrantă și plină de energie. Situat într-o vale pitorească, festivalul nostru
                        aduce împreună artiști de top din întreaga lume, sunete captivante și un decor natural
-                       impresionant, care amplifică magia fiecărui moment.<br><br>Echo Valley este locul unde
+                       impresionant, care amplifică magia fiecărui moment.</p>
+                       <p class="mbr-text mbr-fonts-style mb-4 display-7">Echo Valley este locul unde
                        prieteniile se nasc sub cerul deschis, dansurile durează până la răsărit și amintirile se
                        creează spontan. Fiecare ediție este construită cu pasiune și dedicație, având la bază dorința
                        noastră de a conecta oamenii prin muzică și emoție pură. Vino să simți vibe-ul, să te bucuri de
