--- a/bilete.html
+++ b/bilete.html
@@ -146,7 +146,7 @@ color: #f7f7f7;
               €30</h3>
             <p class="mbr-text mbr-fonts-style display-7">
               Acces pentru o zi la toate scenele și activitățile din cadrul festivalului. Perfect pentru cei care
-              doresc să se bucure de o zi de muzică și atmosferă magică la Echo Valley.<br>
+              doresc să se bucure de o zi de muzică și atmosferă magică la Echo Valley.
             </p>
             <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-primary display-7">Cumpără
                 acum</a></div>
